--- a/UsingScipiper.Rmd
+++ b/UsingScipiper.Rmd
@@ -43,104 +43,60 @@ Like ```remake``` scipiper calls specific tasks using the ```scmake``` function.
 
 ```{r, eval=FALSE}
 #Check what water quality portal codes are already in the dataset
-#wqp_codes comes from the cfg yaml file. 
+#wqp_codes comes from the 1_wqdata/cfg yaml files. 
 scmake('wqp_codes')
 scmake('wqp_states')
 scmake('wqp_pull')
 scmake('wq_dates')
 #Each characteristic name can have many constituent names associated with it
-print(wqp_codes$characteristicName)
 ```
 
 ## Pull an inventory of sites with the parameter codes supplied
 
 Now that we have checked the parameter codes we can pull an inventory of sites 
-that meet our requirements using the ```scmake('tasks_1_wqp.yml')```. Unlike previously this time we are not just checking a YAML file, we are actually using the command to make one called ```tasks_1_wqp.yml```. This second file will hold all the task information to do a full water quality pull of all the data, rather than just site summary info which this call does.  The instructions for generating the tasks_1_wqp.yml target are in remake.yml, right here. Scipiper knows to look in remake.yml because that's the default value of the `remake_file` argument in to `scmake()`, [here](https://github.com/USGS-R/scipiper/blob/master/R/scmake.R#L20). You can change the default `remake.yaml` file name, but likely you will not need to. 
+that meet our requirements using the ```scmake('tasks_1_wqp.yml')```. Unlike previously this time we are not just checking a YAML file, we are actually using the command to make one called ```tasks_1_wqp.yml```. This second file will hold all the task information to do a full water quality pull of all the data from the water quality portal, rather than just site summary info which this call does.  The instructions for generating the tasks_1_wqp.yml target are in remake.yml, right here. Scipiper knows to look in remake.yml because that's the default value of the `remake_file` argument in to `scmake()`, [here](https://github.com/USGS-R/scipiper/blob/master/R/scmake.R#L20). You can change the default `remake.yaml` file name, but likely you will not need to. 
 
 So let's build the inventory!
 
 This can take up to 30 minutes to run.
 
 NOTE: I'd like to add some tidying here to demonstrate what the inventory looks like and to explain why we are using feather. 
+
 ```{r, eval=F}
 #Repull an inventory of sites. Dangerous so it is commented out
-library(scipiper)
 #scmake('tasks_1_wqp.yml')
+
+inv <- feather::read_feather('1_wqdata/out/wqp_inventory.feather')
 
 inv.sum <- inv %>%
   group_by(ResolvedMonitoringLocationTypeName,Constituent) %>%
   summarize(n=n())
 
-table(inv.combo$Constituent)
-inv.combo <-inv %>%
-  filter(Constituent %in% c('tss','chlorophyll','doc','secchi')) %>%
-  group_by(MonitoringLocationIdentifier) %>%
-  summarize(n=length(unique(Constituent)),
-            obs=sum(resultCount)) %>%
-  filter(n > 3)
-              
-
 write_csv(inv.sum,path='9_report/out/SiteByConstituent.csv')
 ```
 
-Uncommented below!
 
-##Full Water Quality Pull (20 hours or so)
+##Full Water Quality Pull (15 hours or so)
+
+Now that we have an inventory build we can do the full water quality pull using the YAML instructions from
+```tasks_1_wqp.yml```. We tell scmake() that we only want to do this part of the make by feeding it the indication file where it checks if the water quality pull has already been done this file is labeled ```1_wqdata/log/tasks_wqp.ind```
+
 ```{r, eval=F}
 scmake('1_wqdata/log/tasks_1_wqp.ind')
 
 ```
 
-#Munging that data
-```{r}
-library(scipiper)
+#Munging Water Quality data
+
+The `remake.yml` file holds instructions some instructions for munging data and the src code wqp.R helps make that happen. So first we need to create a new YAML file ```tasks_1_wqp_munge.yml```. This will generate a YAML using code in wqp.R with instructions for muageing the data, like unit harmonization and stitching all the data into a single feather file. 
+
+```{r, eval=F}
+#Generate the yaml file 
 scmake('tasks_1_wqp_munge.yml','remake.yml')
 
+#Munge the data. 
 scmake('1_wqdata/log/tasks_1_wqp_munge.ind')
 
 ```
 
-##What the munging does
-```{r}
-
-state.doc <- list.files('1_wqdata/out/wqp',full.names = T,pattern='doc') %>%
-  .[!grepl('.ind',.)]
-
-
-dat <- feather::read_feather(state.doc[23])
-names(dat)
-
-
-```
-
-
-```{r}
-combine_feathers <- function(data_file, ...) {
-  # read and combine the individual raw data pull files
-  feathers <- c(...)
-  
-  unified.cols <- c('ActivityStartDate','ResultMeasureValue','ResultMeasure.MeasureUnitCode'
-                    ,'MonitoringLocationIdentifier','CharacteristicName','OrganizationFormalName',
-                    'OrganizationIdentifier')
-  
-  
-  #Use foreach and DoMC to make this operation parallel for computers 
-  #with more than 3 cores
-  
-  cores <- detectCores()-2
-  if(cores < 1){cores <- 1}
-  registerDoMC(cores=cores)
-  combo <- foreach(i=1:length(feathers),.combine=rbind) %dopar% {
-    library(feather)
-    feather::read_feather(feathers[i],columns=unified.cols)
-    # most columns are not particularly useful and they can be different by state so select
-    #only the vital ones here:
-  }
-  
-
-  # write the data file
-  feather::write_feather(combo, path=data_file)
-}
-
-```
 
