Fixed some code to preference same day matchups over shouldering day matchups. Started joining reflectance to wq data.

--- a/2_rsdata/src/0_CloudScenes.Rmd
+++ b/2_rsdata/src/0_CloudScenes.Rmd
@@ -11,7 +11,7 @@ editor_options:
 # Gettting Landsat Cloud Scores
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_knit$set(root.dir='~/Dropbox/UNC-PostDoc All/aquasat/')
+knitr::opts_knit$set(root.dir='~/Dropbox/UNC-PostDocAll/aquasat/')
 library(tidyverse)
 ```
 
