--- a/2_rsdata/src/3_Flat_Overpasses.Rmd
+++ b/2_rsdata/src/3_Flat_Overpasses.Rmd
@@ -114,34 +114,47 @@ wqp.candidates <- bind_rows(wqp.flat,lagos.nute) %>%
 #Load in cloudy dataset which is called dat. 
 dat <- read_feather('2_rsdata/out/clouds.feather')
 
-
 clouds <- dat %>%
   filter(WRS_PATH %in% wrs.inv$PATH &
            WRS_ROW %in% wrs.inv$ROW) %>%
   mutate(sat = str_split_fixed(LANDSAT_ID,'_',5)[,1]) %>%
+  mutate(Date=ymd(str_split_fixed(LANDSAT_ID,'_',6)[,4])) %>%
   select(PATH=WRS_PATH,ROW=WRS_ROW,Date,clouds=CLOUD_COVER,sat,time='SENSING_TIME',landsat_id=LANDSAT_ID) 
-clouds$sat <- str_split_fixed(clouds$sat,'0',2)[,2]
 
+
+clouds$sat <- str_split_fixed(clouds$sat,'0',2)[,2]
 
 
 wqp.pull.same <- inner_join(wqp.candidates,clouds,by=c('PATH','ROW','Date')) %>% 
   ungroup()
 
-#Shoulder the data by 1 day
+
+#Shoulder the data by 1 day and make sure that sites where sequential samples occur only 
+#keep the same day sampling
 wqp.pull.plus1 <- wqp.candidates %>%
   mutate(Date = Date + 1) %>%
+  anti_join(wqp.pull.same, by=c('SiteID','Date')) %>%
   inner_join(clouds,by=c('PATH','ROW','Date')) %>%
   ungroup()
 
 #Shoulder the data by -1 day
 wqp.pull.minus1 <- wqp.candidates %>%
   mutate(Date=Date-1) %>%
+  anti_join(wqp.pull.same, by=c('SiteID','Date')) %>%
   inner_join(clouds,by=c('PATH','ROW','Date')) %>%
   ungroup()
 
 
 
 wqp.pull <- bind_rows(wqp.pull.same,wqp.pull.plus1,wqp.pull.minus1)
+
+#This should only return date site combos where the site was sampled only the day 
+#before and the day after landsat overpass, but not on the same day
+wqp.chk <- wqp.pull %>%
+  group_by(SiteID,Date,PATH,ROW,sat) %>%
+  mutate(n=n()) %>%
+  filter(n > 1) %>%
+  arrange(SiteID,Date)
 
 
 
