--- a/2_rsdata/src/1_Landsat_Site_Inventory.Rmd
+++ b/2_rsdata/src/1_Landsat_Site_Inventory.Rmd
@@ -5,32 +5,36 @@ editor_options:
   chunk_output_type: inline
 ---
 
+# Subsetting Water Quality Portal sites to landsat visible pixels.
+
 The water quality portal gives us a big inventory of sites with siteids and lat longs. Lots of these sites are on small rivers or have multiple characteristics associated with them. So we need to create a subset of the data that is only landsat visible. For now this involves some initial cleaning of the data in R. Sending the data to earth engine and then checking if the water pixels associated with the point are landsat visible (generally wider than 60meters)
 
 Obviously this is not in the remake style yet. Future goals. 
+
+
 ```{r setup}
 library(knitr)
-opts_knit$set(root.dir='~/Dropbox/UNC-PostDoc All/aquasat/')
 library(feather)
 library(googledrive)
 library(tidyverse)
 
+opts_knit$set(root.dir='../..')
+
 
 ```
 
+## Grab all unique water quality sites. 
 
-```{r, eval=F}
+Uniqueness is defined by a unique combination of site name and lat and long.
 
-
-
-
+```{r}
 
 #Read in inventory and exclude nutrient data (not a goal of this project just yet)
 inv <- read_feather('1_wqdata/out/wqp_inventory.feather') %>%
   filter(!Constituent %in% c('tn','p','nitrate')) %>%
   filter(!StateCode %in% c('02','15','72','66')) %>% #No alaska, hawaii, or puerto rico or guam
-  distinct(MonitoringLocationIdentifier,LatitudeMeasure,LongitudeMeasure) %>%
-  filter(!is.na(LatitudeMeasure)) %>%
+  distinct(MonitoringLocationIdentifier,LatitudeMeasure,LongitudeMeasure) %>% #Keep only unique site lat and long. 
+  filter(!is.na(LatitudeMeasure)) %>% #Exclude sites with missing geospatial data
   filter(!is.na(LongitudeMeasure)) %>%
   rename(SiteID=MonitoringLocationIdentifier,lat=LatitudeMeasure,long=LongitudeMeasure)
 
@@ -39,10 +43,7 @@ lagos.sites <- lagosne_load("1.087.1")$locus %>%
   select(SiteID = lagoslakeid,lat=nhd_lat,long=nhd_long) %>%
   mutate(SiteID = paste('lagos',SiteID,sep='-'))
 
-
-
-
-
+#Bind lagos and wqp data together
 lagos.wqp <- bind_rows(lagos.sites,inv)
 #write_csv(inv,'2_rsdata/tmp/uniqueInventory.csv')
 write_feather(lagos.wqp,'2_rsdata/tmp/uniqueInventory.feather')
@@ -52,10 +53,13 @@ write_feather(lagos.wqp,'2_rsdata/tmp/uniqueInventory.feather')
 ```
 
 
+## Check if sites are visible as a water body in Landsat. 
 
+Most of the data living in the Water Quality Portal is on streams, lakes, and/or estuaries that are too small to be visible as water bodies from Landsat satellites, which have a resolution of ~30m. In this project we only want to keep sites that are consistently close to areas classified as water. Luckily there is a really nice paper and dataset from Jean Francois Pekel and others, where they looked at the entire history of Landsat 5-8 and classified how often any given pixel was classified as water. Data from [this paper](https://www.nature.com/articles/nature20584) is available in GEE and we use it to only keep sites that are close to water bodies visible from landsat. 
 
-#This takes 5 minutes or so to run with 400000 sites
-```{python, eval=F, engine.path="/usr/local/bin/python2"}
+The code below checks all sites for water pixels within 200m of the lat long of sites in the WQP. It takes 5 minutes or so to run with 400000 sites
+
+```{python,engine.path="/usr/local/bin/python2"}
 import ee
 ee.Initialize()
 import pandas as p
@@ -135,17 +139,17 @@ print(done)
 
 
 
-#Now download all that data to local machine 
+## Local download
 
 ```{r , eval=F}
 library(googledrive)
 
+#Download data from python output stored in local googledrive folder called tempSiteWater
 folder <- drive_ls('tempSiteWater')
 
 #Download the drive data
 
 # A case for a for loop, because google only allows you one query at a time
-
 for(i in 1:nrow(folder)) {
   path=paste0('2_rsdata/tmp/siteWater/',folder$name[i])
   drive_download(as_id(folder$id[i]),
@@ -160,7 +164,10 @@ for(i in 1:nrow(folder)) {
 
 ```
 
-#Read in all that data and save it as a final water inventory if the max pekel occurence is greater than 60 (later steps can make this more strict)
+## Read in data and save as a single file
+
+This produces a final water inventory if the max pekel occurence is greater than 60 (later steps can make this more strict).
+
 ```{r}
 #Get a list of those files
 water.inv.files <- list.files('2_rsdata/tmp/siteWater',full.names = T)
