--- a/2_rsdata/src/2_WQP_Overlaps.rmd
+++ b/2_rsdata/src/2_WQP_Overlaps.rmd
@@ -5,20 +5,22 @@ date: "1/3/2018"
 output: html_document
 ---
 
-#Here we join our inventory data to the landsat wrs tiles. 
+# Join WQP inventory data to the landsat wrs tiles. 
+
+In order to avoid sending up extraneous data to the WQP portal, we check for the PATH and ROW of each site that is near landsat-detectable water (from step "1_LandsatSiteInventory.Rmd"). Eventually this data will be joined to the actuall concentration data in 3_Flat_Overpasses.Rmd
 
 ```{r setup}
 library(knitr)
-opts_knit$set(root.dir='~/Dropbox/UNC-PostDoc All/aquasat/')
 library(feather)
 library(googledrive)
 library(tidyverse)
 library(sf)
 library(LAGOSNE)
 
+opts_knit$set(root.dir='../..')
 ```
 
-#Load in site data and convert to a sf object
+## Load in site data and convert to an sf object
 ```{r}
 #Load in wqp data
 winv <- read_feather('2_rsdata/out/uniqueWaterInventory.feather')
